modify & re-organize the scripts (with an example of Closure 103)